@@ -1,0 +1,5 @@
+[testoptions]
+min_pyver=3.8
+
+[variables]
+allow-global-unused-variables=no
