@@ -42,6 +42,11 @@ Release date: TBA
 
   Closes #3771
 
+* ``undefined-variable`` and ``unused-variable`` now correctly trigger for assignment expressions
+  in functions defaults
+
+  Fixes part of #3688
+
 * Fix bug with importing namespace packages with relative imports
 
   Closes #2967 and #5131
